# DevSkyy

./: .augmentguidelines  .bandit.yml  .baseline-live-sizes.txt  .claudeignore  .coveragerc  .dockerignore  .env.critical-fuchsia-ape  .env.docker.example  .env.example  .env.fashion.example  .env.mcp.example  .env.production  .env.production.example  .env.production.template  .env.skyyrose-experiences  .env.staging  .env.template  .env.test  .env.vercel  .env.wordpress.example  .env.wordpress_setup  .eslintrc.cjs  .eslintrc.js  .flake8  .git-push-helper.sh  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .impeccable.md  .markdownlint.json  .mcp.json  .mcp.json.example  .plugin-fix-complete  .pre-commit-config.yaml  .prettierrc.js  .replit  .secrets.baseline  .trufflehogignore  .vercelignore  (+501 more)
.claude/: CLAUDE.md  IMMEDIATE_REQUIREMENTS.md  learn-elite-studio-progress.md  learn-wordpress-theme-progress.md  mcp-config.json  ralph-loop-iteration-2.md  ralph-loop.local.md  settings.json
.cloudflare/: config.yml
.codex/: config.toml
.design-sync/: NOTES.md  config.json
.devskyy/: README.md  scopes.toml
.emergent/: summary.txt
.githooks/: pre-commit
.github/: *.instructions.md  ACTIONS_PINNING.md  BRANCH_PROTECTION.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  WORKFLOW_CLEANUP_SUMMARY.md  auto-assign.yml  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md
.husky/: CLAUDE.md  post-checkout  post-commit  post-merge  pre-commit  pre-push
.planning/: .continue-here.md  CLAUDE-SDK-INTEGRATION-PLAN.md  CLAUDE.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  SKYYROSE_LAUNCH_NIGHT_SPEC_V2.html  SKYYROSE_STRUCTURAL_REMEDIATION_SPEC.html  STATE.md  config.json  render-pipeline-architecture.md
.ralph/: homepage-rebuild-prompt.md  prd-interactive-collections.json  progress.txt  ralph-context.md  ralph-directive.md  ralph-history.json  ralph-loop.state.json  ralph-prompt-codex-rebuild.md  ralph-prompt-phase2.md  ralph-tasks.md
.ralph-tui/: progress.md  session-meta.json  session.json
.reports/: codemap-diff.txt
.serena/: project.yml
.swarm/: state.json
.wolf/: CLAUDE.md  OPENWOLF.md  anatomy.md  (+9 more)
agents/devskyy-a2a/: CLAUDE.md  Makefile  README.md  pyproject.toml
agents/devskyy-a2a/agents/: agent.py
agents/devskyy-a2a/agents/app_utils/: telemetry.py  typing.py
agents/devskyy-a2a/tests/eval/evalsets/: skill_routing.evalset.json
agents/devskyy-a2a/tests/integration/: test_agent.py
agents/elite_web_builder/: CLAUDE.md  __init__.py  __main__.py  conftest.py  director.py  prd.md  pyproject.toml  requirements.txt  run.py  run_tests.py  triggers.py
agents/elite_web_builder/agents/: CLAUDE.md  __init__.py  accessibility.py  backend_dev.py  base.py  competitor_scout.py  design_system.py  ecommerce_photography.py  frontend_dev.py  garment_3d.py  imagery.py  performance.py  provider_adapters.py  qa.py  runtime.py  seo_content.py  social_media.py  theme_builder.py
agents/elite_web_builder/config/: CLAUDE.md  learning_journal.json  provider_routing.json  quality_gates.json
agents/elite_web_builder/core/: CLAUDE.md  __init__.py  cost_tracker.py  gate_checkers.py  ground_truth.py  learning_journal.py  model_router.py  output_writer.py  ralph_integration.py  self_healer.py  verification_loop.py
agents/elite_web_builder/evals/: wordpress_theme_colors.md
agents/elite_web_builder/knowledge/: CLAUDE.md  canonical_catalog.md  competitor_intel.md  ecommerce_photography.md  garment_3d.md  imagery.md  performance_budgets.md  photo_generation.md  security_checklist.md  shopify.md  shopify_themes.md  social_media.md  theme_json_schema.md  wcag_checklist.md  woocommerce.md  wordpress.md  wordpress_deployment.md
agents/elite_web_builder/output/: last_report.json
agents/elite_web_builder/templates/: CLAUDE.md
agents/elite_web_builder/templates/shopify/: settings_schema_starter.json
agents/elite_web_builder/templates/wordpress/: functions-starter.php  theme-json-starter.json
agents/elite_web_builder/tests/: CLAUDE.md  __init__.py  conftest.py  test_agent_runtime.py  test_base_agents.py  test_cli.py  test_context7_bridge.py  test_core_modules.py  test_cost_tracker.py  test_director.py  test_execute_prd.py  test_gate_checkers.py  test_ground_truth.py  test_integration.py  test_learning_journal.py  test_lighthouse_runner.py  test_model_router.py  test_new_specs.py  test_output_writer.py  test_provider_adapters.py  test_ralph_integration.py  test_screenshot_diff.py  test_self_healer.py  test_specialist_agents.py  test_system_verification.py  test_template_scaffold.py  test_tools.py  test_triggers_dispatch.py  test_verification_loop.py
agents/elite_web_builder/tools/: CLAUDE.md  __init__.py  context7_bridge.py  contrast_checker.py  file_validator.py  lighthouse_runner.py  screenshot_diff.py  spacing_scale.py  template_scaffold.py  type_scale.py
devskyy-sdk-app/: .env.example  .gitignore  README.md  catalog.py  main.py  pyproject.toml  test_tools.py  tools.py
fashion-ai-repo/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
fashion-ai-repo/.github/workflows/: README.md  ci.yml  dependencies.yml  docker.yml  release.yml  security.yml
fashion-ai-repo/artifacts/: bandit-report.json  build-manifest.yaml  endpoint-map.txt  function-map.txt
fashion-ai-repo/config/: agents.yaml  logging.conf  ml.yaml  project.yaml  queue.yaml
fashion-ai-repo/docs/: api_reference.md  system_overview.md
fashion-ai-repo/scripts/: backup_db.py  run_health_check.py
fashion-ai-repo/src/: __init__.py
fashion-ai-repo/src/agents/: __init__.py  base.py  commerce.py  designer.py  finance.py  marketing.py  ops.py
fashion-ai-repo/src/api/: __init__.py  app.py  routes.py
fashion-ai-repo/src/cli/: __init__.py  __main__.py
fashion-ai-repo/src/core/: __init__.py  config.py  logging.py  queue.py  utils.py
fashion-ai-repo/src/ml/: __init__.py  pipeline.py
fashion-ai-repo/tests/: __init__.py  conftest.py  test_endpoints.py  test_integration_cycle.py
(+9793 files in other folders)
