[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devskyy"
version = "3.1.0"
description = "AI-driven multi-agent orchestration platform for enterprise e-commerce automation with WordPress/WooCommerce integration, 3D asset generation, and LangGraph workflows"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.15"
authors = [
    { name = "DevSkyy Platform Team", email = "dev@devskyy.com" }
]
keywords = [
    "ai",
    "agents",
    "multi-agent",
    "orchestration",
    "wordpress",
    "woocommerce",
    "elementor",
    "e-commerce",
    "automation",
    "llm",
    "mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    # Core Framework
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "mangum>=0.18.0",  # ASGI adapter for serverless
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-multipart>=0.0.22",

    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "aiosqlite>=0.19",

    # Security
    "PyJWT>=2.8",
    "passlib[bcrypt]>=1.7",
    "argon2-cffi>=23.1",
    "cryptography>=41",
    "bcrypt>=4.1",

    # HTTP
    "httpx>=0.25",
    "aiohttp>=3.9",
    "requests>=2.31",

    # AI/ML & MCP Server
    "openai>=1.6",
    "mcp>=1.23.0",  # Fixed: CVE-2025-53365, CVE-2025-53366, CVE-2025-66416

    # LLM Provider SDKs
    "anthropic>=0.75.0",
    "google-genai>=1.50.0",
    "cohere>=5.20.0",
    "mistralai>=1.10.1",  # Updated for security and compatibility
    "groq>=0.37.0",

    # Monitoring
    "prometheus-client>=0.19",

    # Utilities
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "pyyaml>=6.0",
    "orjson>=3.9",
    "python-dateutil>=2.8",
    "email-validator>=2.1",
    "structlog>=25.5.0",
    # "python-jose[cryptography]>=3.3",  # Removed: depends on ecdsa (CVE-2024-23342). Using PyJWT instead.
    "sentry-sdk>=2.49.0",
    "toml>=0.10.2",

    # 3D & Visual Generation
    "Pillow>=10.0",
    "opencv-python>=4.8",

    # Performance & Async I/O
    "aiofiles>=24.1.0",
    "fastapi-cache2>=0.2.1",
    "redis>=5.0",

    # ML/AI - Critical for Round Table and RAG
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "transformers>=4.53.0",
    "sentence-transformers>=3.3.1",
    "tiktoken>=0.8.0",
    "chromadb>=0.6.0",
    "diffusers>=0.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "mypy>=1.8",
    "ruff>=0.1",
    "black>=24.1",
    "isort>=5.13",
    "pre-commit>=3.6",
    "selenium>=4.15",
    "playwright>=1.40",
    # Additional dev tools from requirements-dev.txt
    "pip-tools>=7.3",
    "ipython>=8.18",
    "watchfiles>=0.21",
]

api = [
    "fastapi>=0.104",
    "mangum>=0.18.0",
    "pydantic>=2.5",
    "PyJWT>=2.8",
]

mcp = [
    "mcp>=1.23.0",
    "openai>=1.57.2",
    "anthropic>=0.75.0",
    "google-genai>=1.50.0",
    "fastapi>=0.119.0",
    "uvicorn>=0.32.1",
    "starlette>=0.49.1",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "httpx>=0.28.1",
    "aiohttp>=3.12.14",
    "asyncio==3.4.3",
    "aiofiles==25.1.0",
    "orjson==3.11.5",
    "python-dotenv==1.0.1",
    "structlog==25.5.0",
    "loguru==0.7.2",
    "tenacity==9.1.2",
    "backoff==2.2.1",
    "ratelimit==2.2.1",
    "cryptography==46.0.3",
    "pyjwt==2.10.1",
    "sqlalchemy==2.0.45",
    "aiosqlite==0.22.1",
    "redis==7.1.0",
    "aioredis==2.0.1",
    "pyyaml==6.0.2",
    "toml==0.10.2",
    "typing-extensions==4.12.2",
    "python-dateutil==2.9.0.post0",
    "tiktoken>=0.8.0",
    "transformers>=4.53.0",
    "sentence-transformers==3.3.1",
    "langchain>=0.3.18",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "chromadb>=0.6.0",
    "faiss-cpu==1.13.1",
    "beautifulsoup4==4.12.3",
    "requests==2.32.5",
    "pypdf>=6.6.2",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "pillow==11.0.0",
    "soundfile==0.12.1",
    "rich==13.9.4",
    "click==8.1.7",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "healthcheck==1.3.3",
    "psutil==6.1.0",
    # OpenTelemetry compatibility (google-adk requires <=1.37.0)
    "opentelemetry-api>=1.37.0,<=1.37.0",
    "opentelemetry-sdk>=1.37.0,<=1.37.0",
    "opentelemetry-semantic-conventions>=0.48b0,<0.60",  # Required by mistralai
]

ml = [
    "torch==2.9.1",
    "torchvision==0.24.1",
    "torchaudio==2.9.1",
    "transformers>=4.53.0",
    "huggingface-hub>=0.27.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "scikit-learn>=1.6.0",
    "accelerate>=1.2.1",
    "datasets>=3.1.0",
    "tokenizers>=0.21.0",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "imageio>=2.36.1",
    "nltk>=3.9.1",
    "spacy>=3.8.2",
    "textblob>=0.18.0.post0",
    "mlflow>=3.5.0",
    "bentoml>=1.4.34",
    "wandb>=0.24.2",  # Updated for protobuf 6.x compatibility
    "tensorboard==2.20.0",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "plotly==5.24.1",
    "feature-engine==1.9.3",
    "category-encoders==2.6.4",
    "optuna==4.1.0",
    "hyperopt==0.2.7",
    "librosa==0.10.2.post1",
    "soundfile==0.12.1",
    "statsmodels==0.14.6",
    "prophet==1.2.1",
    "gymnasium>=1.0.0",
    "stable-baselines3>=2.5.0",
    "shap==0.46.0",
    "lime==0.2.0.1",
    "polars==1.15.0",
    "pyarrow==22.0.0",
    "asyncio==3.4.3",
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "tqdm==4.67.1",
    "joblib==1.5.3",
    "dill==0.4.0",
    "fastapi>=0.119.0",
    "uvicorn>=0.32.1",
    "pydantic>=2.10.3",
    "sqlalchemy==2.0.45",
    "pymongo==4.10.1",
    # Compatibility constraints for dependency resolution
    "protobuf>=6.33.5",  # CVE-2026-0994 fix: JSON recursion depth bypass vulnerability
    "fsspec>=2025.7.0",  # Required by bentoml>=1.4.34
    # LlamaIndex multimodal capabilities
    "llama-index>=0.12.0",
    "llama-index-llms-openai>=0.3.0",
    "llama-index-multi-modal-llms-anthropic>=0.2.0",
    "llama-index-multi-modal-llms-huggingface>=0.2.0",
    # Gradio client for HF Spaces
    "gradio-client>=1.5.0",
]

worker = [
    # Background task processing
    "celery>=5.4.0",
    "kombu>=5.4.2",
    "flower>=2.0.0",
]

deploy = [
    # Production deployment
    "gunicorn>=23.0.0",
    "uvicorn[standard]>=0.32.1",
]

sdk = [
    # Claude Agent SDK integration
    "claude-agent-sdk>=0.1.18",
]

all = [
    "devskyy[dev,api,mcp,ml,worker,deploy,sdk]",
]

[project.urls]
Homepage = "https://github.com/devskyy/devskyy"
Documentation = "https://docs.devskyy.com"
Repository = "https://github.com/devskyy/devskyy"
Changelog = "https://github.com/devskyy/devskyy/blob/main/CHANGELOG.md"

[project.scripts]
devskyy = "main_enterprise:main"
prompt-enhance = "cli.prompt_enhance:cli"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "core*",
    "api*",
    "security*",
    "database*",
    "wordpress*",
    "agents*",
    "orchestration*",
    "runtime*",
    "llm*",
    "cli*",
    "services*",
]
exclude = ["tests*", "docs*", "legacy*"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.json", "*.yaml"]

# =============================================================================
# Ruff Configuration
# =============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["legacy/", "*.pyi", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "ARG001", # unused function argument (common with FastAPI dependencies)
    "ARG002", # unused method argument (common with API handlers)
    "SIM102", # nested if statements (sometimes more readable)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "api", "security", "database", "wordpress", "agents", "orchestration", "runtime", "llm"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002"]
"**/conftest.py" = ["ARG001"]

# =============================================================================
# Black Configuration
# =============================================================================

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | legacy
)/
'''

# =============================================================================
# isort Configuration
# =============================================================================

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["core", "api", "security", "database", "wordpress", "agents", "orchestration", "runtime", "llm"]
skip = ["legacy/", ".venv/"]

# =============================================================================
# MyPy Configuration
# =============================================================================

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true
exclude = [
    "hf-spaces/.*",
    "legacy/.*",
    ".venv/.*",
    "build/.*",
    "dist/.*",
]

# Third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "celery.*",
    "redis.*",
    "woocommerce.*",
    "mcp.*",
    "chromadb.*",
    "sentence_transformers.*",
    "diffusers.*",
    "transformers.*",
    "cv2.*",
    "PIL.*",
    "scipy.*",
    "sklearn.*",
    "prophet.*",
    "tiktoken.*",
    "structlog.*",
    "tenacity.*",
]
ignore_missing_imports = true

# First-party code - enforce strict typing
[[tool.mypy.overrides]]
module = [
    "core.*",
    "api.*",
    "security.*",
    "database.*",
    "wordpress.*",
    "agents.*",
    "orchestration.*",
    "runtime.*",
    "llm.*",
    "mcp_servers.*",
    "pipelines.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true

# Tests - allow some flexibility
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

# =============================================================================
# Pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests as security tests (XSS, CSRF, SQL injection, etc.)",
    "smoke: critical path tests for CI (run with '-m smoke')",
]
# Production test timeouts - 120s allows for network/ML operations
timeout = 120

# =============================================================================
# Coverage Configuration
# =============================================================================

[tool.coverage.run]
source = ["core", "api", "security", "database", "wordpress", "agents", "orchestration", "runtime", "llm"]
branch = true
omit = ["tests/*", "*/__init__.py", "legacy/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
precision = 2
