# DevSkyy v5.2.0 - pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devskyy"
version = "5.2.0"
description = "Enterprise multi-agent AI orchestration platform for fashion e-commerce"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "SkyyRose", email = "dev@skyyrose.co"}
]
keywords = ["ai", "agents", "fashion", "ecommerce", "wordpress", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "cryptography>=46.0.5,<47.0.0",
    "PyJWT>=2.8.0",
    "passlib[argon2]>=1.7.4",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]
mcp = [
    "fastmcp>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/The-Skyy-Rose-Collection-LLC/DevSkyy"
Documentation = "https://github.com/The-Skyy-Rose-Collection-LLC/DevSkyy#readme"
Repository = "https://github.com/The-Skyy-Rose-Collection-LLC/DevSkyy.git"

[project.scripts]
devskyy = "devskyy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["devskyy*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
